--- a/Assignment 3/3.2/Dockerfile
+++ b/Assignment 3/3.2/Dockerfile
@@ -8,10 +8,11 @@ COPY . .
 
 # install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
-# RUN pip install psycopg2-binary
+
+RUN pip install psycopg2-binary
 
 # define the port number the container should expose
 EXPOSE 5001
 
 # run the command
-CMD ["python", "app.py"]
+CMD ["python", "app_v1.py"]
