--- a/Assignment 3/3.2/service.yaml
+++ b/Assignment 3/3.2/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-service
+  name: flask-app
 spec:
-  type: LoadBalancer
   selector:
-    app: app
+    app: flask-app
   ports:
   - name: http
     port: 80
     targetPort: 5001
+    nodePort: 30001
+  type: NodePort
